--- a/product.html
+++ b/product.html
@@ -29,16 +29,13 @@
         document.getElementById("computer").innerHTML="computer"
         document.getElementById("computer").style.color="red"
     </script>
-</body> <img src="Image/Hisense.jpg" alt="">
+ <img src="Image/Hisense.jpg" alt="">
 <a href="index.html" class="btn btn-primary ">click here</a>
 <a href="product.html" class="btn btn-success">clickme</a>
 <a href="registration.html" class="btn btn-danger">clickme</a>
 
 
-
-</html>
- 
-</html>
+</body>
 </html>
 
      
