--- a/product.html
+++ b/product.html
@@ -16,12 +16,12 @@
     <h1>fork</h1>
     <p class="fish">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima perspiciatis animi veniam error dignissimos illum, dolore vel at expedita, exercitationem fuga neque. Aliquid libero quaerat laudantium? Adipisci dolorem magni quo!</p>
  </div>
-    <img src="Image/audi.jpg" alt="" width="20%">
-    <img src="Image/dell - Copy (2) - Copy - Copy.jpg" alt="" width=20%>
-    <img src="Image/dell - Copy (2).jpg" alt="" width="20%">
-    <img src="Image/dell - Copy.jpg" alt="" width="20%">
-    <img src="Image/Hisense.jpg" alt="" width="20%">
 
+    <img src="image/audi.jpg" alt="">
+    <img src="image/dell - Copy (2) - Copy - Copy.jpg" alt="">
+    <img src="image/Hisense.jpg" alt="">
+    <img src="image/dell - Copy.jpg" alt="">
+    <img src="image/dell - Copy (2).jpg" alt="">
     <script>
         document.write("my name")
         console.log("my name")
