--- a/product.html
+++ b/product.html
@@ -34,6 +34,8 @@
 <a href="product.html" class="btn btn-success">clickme</a>
 <a href="registration.html" class="btn btn-danger">clickme</a>
 
+ <audio src="audio/Discovering and Fulfilling Life's Purpose (Part 2) (64  kbps).mp3"></audio>
+
 
 </body>
 </html>
