--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
 <a href="product.html" class="btn btn-success">clickme</a>
 <a href="registration.html" class="btn btn-danger">clickme</a>
 
- <audio controls>
+ <audio controls style="width: 100%;">
      <source src="audio/Discovering and Fulfilling Life's Purpose (Part 2) (64  kbps).mp3"> 
  </audio>
 
