--- a/registration.html
+++ b/registration.html
@@ -24,7 +24,7 @@
             <option value="">male</option>
             <option value="">female</option>
         </select> <br><br>
-        <button type="submit" class="btn btn-primary">submit</button><br> <br>
+        <button type="submit" class="btn btn-primary" onclick="alert('successful')">submit</button><br> <br>
         
     </form>
     </div>
